Replaced "Browse" with "More Services"
The Azure portal has been updated and the "Browse" button has been
replaced with a "More Services" button.

--- a/Instructions/Labs/dotnet/Mod01/20532C_LAB_AK_01.md
+++ b/Instructions/Labs/dotnet/Mod01/20532C_LAB_AK_01.md
@@ -51,13 +51,13 @@
 
 #### Task 2: View a blade
 
-1. On the left side of the screen, click **Browse**.
+1.  In the navigation pane on the left side, click **More Services**.
 
 2. Within the list located in the **Browse** panel that displays, click **Subscriptions**.
 
 3. Observe the **Subscriptions** blade that displays.
 
-1. On the left side of the screen, click **Browse** again.
+1.  In the navigation pane on the left side, click **More Services**.
 
 2. Within the list located in the **Browse** panel that displays, click **Portal Settings**.
 
