--- a/Instructions/Labs/dotnet/Mod03/20532C_LAB_AK_03.md
+++ b/Instructions/Labs/dotnet/Mod03/20532C_LAB_AK_03.md
@@ -80,7 +80,7 @@
 
 > **Note:** Creating a Web App is typically very fast, but you have to wait for the Web App to be created and running before you can go to the Web App. When the Web App is running, its status displays as Running in the **Web Apps** list.
 
-1.  In the navigation page on the left side, click **Browse**.
+1.  In the navigation pane on the left side, click **More Services**.
 
 2. Scroll-down, locate and select the **App Services** option.
 
@@ -132,7 +132,7 @@
 
 5.  Click **Sign In**
 
-1.  In the navigation page on the left side, click **Browse**.
+1.  In the navigation pane on the left side, click **More Services**.
 
 2. Scroll-down, locate and select the **App Services** option.
 
@@ -152,7 +152,7 @@
 
 2.  In the Publish Web window, click **Import**.
 
-3.  In the **Import from a publish profile file** dialog box, click **Browse**.
+3.  In the **Import from a publish profile file** dialog box, click the **Browse** option.
 
 4.  In the Libraries window, go to **Allfiles (F):\\Mod03\\Labfiles**, and then double-click your previously saved publish profile.
 
@@ -234,7 +234,7 @@
 
 5.  Click **Sign In**.
 
-1.  In the navigation page on the left side, click **Browse**.
+1.  In the navigation pane on the left side, click **More Services**.
 
 2. Scroll-down, locate and select the **App Services** option.
 
