--- a/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
+++ b/Instructions/Labs/dotnet/Mod04/20532C_LAB_AK_04.md
@@ -20,7 +20,7 @@
 
 #### Task 2: Create an Azure SQL database by using the Azure Portal
 
-1.  In the navigation pane on the left side, scroll down, and then click **Browse**.
+1.  In the navigation pane on the left side, scroll down, and then click **More Services**.
 
 2.  In the **Browse** blade that displays, click **SQL databases**.
 
@@ -291,7 +291,7 @@
 
 #### Task 7: View the data in the Azure SQL Database
 
-1.  In the navigation pane on the left side, scroll down, and then click **Browse**.
+1.  In the navigation pane on the left side, scroll down, and then click **More Services**.
 
 2.  In the **Browse** blade that displays, click **SQL databases**.
 
