--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -20,7 +20,7 @@
 
 #### Task 2: Create a container by using the Portal
 
-1.  In the navigation pane on the left side of the screen, scroll down, and then click **Browse**.
+1.  In the navigation pane on the left side of the screen, scroll down, and then click **More Services**.
 
 2.  In the **Browse** blade that displays, click **Storage accounts**.
 
