--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -18,7 +18,7 @@
 
 #### Task 2: Create a Resource Group
 
-1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **Browse**.
+1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **More Services**.
 
 2. In the **Browse** blade that displays, click **Resource groups**.
 
@@ -36,7 +36,7 @@
 
 #### Task 3: Create a Virtual Network
 
-1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **Browse**.
+1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **More Services**.
 
 2. In the **Browse** blade that displays, click **Virtual networks**.
 
@@ -68,7 +68,7 @@
 
 #### Task 1: Create a storage account
 
-1.  In the navigation pane on the left side of the Azure Portal, scroll down, and click **Browse**.
+1.  In the navigation pane on the left side of the Azure Portal, scroll down, and click **More Services**.
 
 2. In the **Browse** blade that displays, click **Storage Accounts**.
 
@@ -102,7 +102,7 @@
 
 #### Task 2: Create a virtual machine
 
-1. In the navigation pane on the left side of the Azure Portal, scroll down, and click **Browse**.
+1. In the navigation pane on the left side of the Azure Portal, scroll down, and click **More Services**.
 
 2. In the **Browse** blade that displays, click **Virtual machines**.
 
