--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
@@ -258,7 +258,7 @@
 
 5. Click **Sign In**.
 
-1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **Browse**.
+1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **More Services**.
 
 2. In the **Browse** blade that displays, click **Storage accounts**.
 
