Updated VS2015 Instructions
Updated Instructions to Open **Visual Studio 2015**

--- a/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
+++ b/Instructions/Labs/dotnet/Mod02/20532C_LAB_AK_02.md
@@ -326,8 +326,10 @@
 
 #### Task 4: Add your Azure subscription to Visual Studio
 
-1. On the Start screen, click the **Visual Studio 2015** tile.
+1. On the Start screen, locate and click the **Visual Studio 2015** tile.
 
+  > **Note:** You might have to use the down arrow to locate the Visual Studio 2015 tile on your Start screen.
+  
 2. You will be prompted to sign-in using a **Microsoft Account**. Perform the following steps:
 
     a. Click the **Sign in** button.
