--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
@@ -70,9 +70,9 @@ Sign in to the Azure Portal (<https://portal.azure.com>).
 
 1.  View the list of Storage instances for your subscription.
 
-Go to the **Containers** page for your **stor20532[*Your Name*]** subscription.
+1. Go to the **Blob Service** blade for your **stor20532[*Your Name*]** subscription.
 
-Create a new Container with the following values:
+1. Create a new Container with the following values:
 
   - Name: **example**
 
@@ -82,7 +82,7 @@ Create a new Container with the following values:
 
 1.  Open Visual Studio 2015.
 
-1. Open the **Storage Accounts** node in the **Cloud Explorer** pane.
+1. Open the **Storage** node in the **Server Explorer** pane.
 
 1. Open the **example** container in your storage account:
 
