--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -30,9 +30,9 @@
 
 5.  Click the name of the storage account to go to its dashboard.
 
-6.  In the **stor20532*\[Your Name Here*\]** blade that displays, click the **Containers** tile.
+6.  In the **stor20532*\[Your Name Here*\]** blade that displays, click the **Blobs** tile.
 
-7.  In the **Containers** blade that displays, view the list of your containers.
+7.  In the **Blob service** blade that displays, view the list of your containers.
 
 8.  At the top of the blade, click **Add**.
 
@@ -42,21 +42,23 @@
 
     b. In the **Access Type** list, select **Container**.
 
-    c. Click **OK** to create your container.
+    c. Click **Create** to create your container.
 
 #### Task 3: Add and access blob files in your container
 
-1.  On the Start screen, click the **Visual Studio 2015** tile.
+1. On the Start screen, locate and click the **Visual Studio 2015** tile.
 
-2.  On the **View** menu, click **Cloud Explorer**.
+  > **Note:** You might have to use the down arrow to locate the Visual Studio 2015 tile on your Start screen.
 
-3.  Expand the **Storage Accounts** node.
+2.  On the **View** menu, click **Server Explorer**.
+
+3.  Expand the **Storage** node.
 
     > **Note:** If you have not previously indicated that you want Visual Studio to remember your credentials, you will be prompted to enter your Microsoft account username and password to continue.
 
-4.  Expand the **stor20532*[Your Name]*** account node under the **Storage Accounts** node.
+4.  Expand the **stor20532*[Your Name]*** account node under the **Storage** node.
 
-5.  Expand the **Blobs** node under your storage account’s node.
+5.  Expand the **Blob Containers** node under your storage account’s node.
 
 6.  Double-click **example**.
 
