--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -688,9 +688,9 @@
 
 1. Close the **Contoso.Events – Microsoft Visual Studio** application.
 
-1. On the Start screen, locate the **Visual Studio 2015** tile, right-click, and then select **Run as Administrator**.
+1. On the Start screen, locate and click the **Visual Studio 2015** tile.
 
-  > **Note:** You might have to use the down arrow to locate the Visual Studio 2015 tile on your Start screen. After you start the application in the administrator context, you might see the UAC prompt. Select **Yes** to continue.
+  > **Note:** You might have to use the down arrow to locate the Visual Studio 2015 tile on your Start screen.
 
 1. On the **File** menu, point to **Open**, and then click **Project/Solution**.
 
