Replaced Server Explorer with Cloud Explorer

--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_07.md
@@ -82,7 +82,7 @@ Sign in to the Azure Portal (<https://portal.azure.com>).
 
 1.  Open Visual Studio 2015.
 
-1. Open the **Storage** node in the **Server Explorer** pane.
+1. Open the **Storage Accounts** node in the **Cloud Explorer** pane.
 
 1. Open the **example** container in your storage account:
 
@@ -226,7 +226,7 @@ In this exercise, you will:
 
 The main tasks for this exercise are as follows:
 
-  1.  Modify Container Access using Server Explorer.
+  1.  Modify Container Access using Cloud Explorer.
 
   1.  Generate temporary SAS tokens by using the SDK.
 
