--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -50,7 +50,7 @@
 
   > **Note:** You might have to use the down arrow to locate the Visual Studio 2015 tile on your Start screen.
 
-2.  On the **View** menu, click **Server Explorer**.
+2.  On the **View** menu, click **Cloud Explorer**.
 
 3.  Expand the **Storage** node.
 
@@ -62,7 +62,7 @@
 
 6.  Double-click **example**.
 
-7.  In the example \[Container\] tab, click Upload Blob.
+7.  In the example [Container] tab, click Upload Blob.
 
     > **Note:** The icon on the upload button includes an arrow that is pointing upward to a horizontal line.
 
@@ -298,7 +298,7 @@
 
 ## Exercise 4: Specifying Permissions for the Container
 
-#### Task 1: Modify Container Access using Server Explorer
+#### Task 1: Modify Container Access using Cloud Explorer
 
 1.  On the desktop, click the Contoso.Events - Visual Studio 2015 window.
 
