--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
@@ -300,9 +300,7 @@
 
     > **Note:** you can use any of the keys listed for this lab.
 
-10. Record the *Key* value listed for the access key you selected.
-
-11. For the access key you selected, click the three ellipsis (...) button to the right of the key. Once clicked, select the **View connection string** option.
+10. For the access key you selected, click the three ellipsis (...) button to the right of the key. Once clicked, select the **View connection string** option.
 
 10. In the **View connection string** dialog, record your connection string for the access key you selected.
 
@@ -330,31 +328,15 @@
 
 4. Wait for debugging to complete (when the console window closes).
 
-#### Task 3: Use Server Explorer in Visual Studio 2015 to view table storage registrations
+#### Task 3: Use Cloud Explorer in Visual Studio 2015 to view table storage registrations
 
-1.  On the **View** menu, click **Server Explorer**.
+1.  On the **View** menu, click **Cloud Explorer**.
 
-1.  In the **Server Explorer** pane, locate and click the arrow at the left side of the **Azure** node to expand the node.
-
-2.  Locate the **Storage** node and click the arrow at the left side to expand the node.
+1.  In the **Cloud Explorer** pane, locate the **Storage Accounts** node and click the arrow at the left side to expand the node.
 
 4.  If prompted for your account credentials, sign in by using your **Microsoft Account**.
 
-4.  Right-click the **Storage** node and select the **Attach External Storage** option.
-
-5.  In the **Add New Storage Account** dialog, perform the following actions:
-
-    a. Enter the **Account name** and **Account key** from your connection information recorded earlier in this lab.
-
-    b. Ensure that the **Remember account key** option is selected.
-
-    c. Ensure that the **Use HTTPS (Recommended)** option is selected in the *Connection* section.
-
-    d. Ensure that the value in the **Preview connection string** section matches the *connection string* you recorded earlier.
-
-    d. Click the **OK** button.
-
-5.  In the **Server Explorer** pane, expand the node for your newly added *Storage Account* under the **Storage Accounts** node.
+4.  Expand the node for your newly created *Storage Account* under the **Storage Accounts** node.
 
 6.  Expand the **Tables** node immediately under your *Storage Account*'s node.
 
@@ -436,13 +418,13 @@
 
 8.  Close the tab displaying the website.
 
-#### Task 5: Use Server Explorer in Visual Studio 2015 to view the new table storage registration
+#### Task 5: Use Cloud Explorer in Visual Studio 2015 to view the new table storage registration
 
 1.  Switch to the **Contoso.Events – Microsoft Visual Studio** window.
 
-1.  On the **View** menu, click **Server Explorer**.
+1.  On the **View** menu, click **Cloud Explorer**.
 
-2.  Locate the **Storage** node under the **Azure** node and click the arrow at the left side.
+2.  Locate the **Storage Accounts** node and click the arrow at the left side.
 
 4.  If prompted for your account credentials, sign in by using your **Microsoft Account**.
 
