Bug Fixes Mod 7

--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_06.md
@@ -248,7 +248,7 @@ The main tasks for this exercise are as follows:
 
 3. Record the *account name* for your newly created Storage Account instance.
 
-4. Select an access key and record the *key* and *connection string* for that key.
+4. Select an access key and record the *connection string* for that key.
 
 #### Task 2: Run the data generation console project to populate the Azure storage table with data
 
@@ -256,7 +256,7 @@ The main tasks for this exercise are as follows:
 
 1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the **StorageConnectionString** *AppSetting*.
 
-2.  Debug the **Contoso.Events.Data.Generation** project.
+1. Debug the **Contoso.Events.Data.Generation** project to generate the SQL and storage tables data.
 
 #### Task 3: Use Cloud Explorer in Visual Studio 2015 to view table storage registrations
 
