--- a/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
+++ b/Instructions/Labs/dotnet/Mod06/20532C_LAB_AK_06.md
@@ -358,9 +358,11 @@
 
 1. In the **Startup Project** section, locate and select the **Multiple startup projects** option.
 
-1. Within the **Multiple startup projects** table, locate the **Contoso.Events.Web** entry and change it's *Action* from **None** to **Start**.
+1. Within the **Multiple startup projects** table, perform the following actions:
 
-1. Within the **Multiple startup projects** table, locate the **Contoso.Events.Worker** entry and change it's *Action* from **None** to **Start**.
+    a. Locate the **Contoso.Events.Web** entry and change it's *Action* from **None** to **Start**.
+
+    b. Locate the **Contoso.Events.Worker** entry and change it's *Action* from **None** to **Start**.
 
 1. Click the **OK** button to close the *Property* dialog.
 
