--- a/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
+++ b/Instructions/Labs/dotnet/Mod07/20532C_LAB_AK_07.md
@@ -44,7 +44,25 @@
 
     c. Click **Create** to create your container.
 
-#### Task 3: Add and access blob files in your container
+#### Task 3: Obtain the Storage Account connection string
+
+1. In the **Storage account** blade, record the name of your *storage account*.
+
+8. Click the **Settings** button at the top of the blade.
+
+8. In the **Settings** blade, select the **Access keys** option.
+
+9. In the **Access keys** blade, locate a key that you wish to use.
+
+    > **Note:** you can use any of the keys listed for this lab.
+
+10. For the access key you selected, click the three ellipsis (...) button to the right of the key. Once clicked, select the **View connection string** option.
+
+10. In the **View connection string** dialog, record your connection string for the access key you selected.
+
+    > **Note:** This connection string will be used in various parts of this lab.
+
+#### Task 4: Add and access blob files in your container
 
 1. On the Start screen, locate and click the **Visual Studio 2015** tile.
 
@@ -52,7 +70,7 @@
 
 2.  On the **View** menu, click **Cloud Explorer**.
 
-3.  Expand the **Storage** node.
+3.  Expand the **Storage Accounts** node.
 
     > **Note:** If you have not previously indicated that you want Visual Studio to remember your credentials, you will be prompted to enter your Microsoft account username and password to continue.
 
@@ -62,7 +80,7 @@
 
 6.  Double-click **example**.
 
-7.  In the example [Container] tab, click Upload Blob.
+7.  In the **example [Container]** tab, click the *Upload Blob* button.
 
     > **Note:** The icon on the upload button includes an arrow that is pointing upward to a horizontal line.
 
@@ -76,9 +94,11 @@
 
     d. Click **Open**.
 
-    e. Click **OK**.
+    e. Leave the **folder** option set to it's default (blank) value.
 
-9.  Switch to the Internet Explorer window.
+    e. Click the **OK** button to complete the dialog.
+
+9.  Switch to the **Internet Explorer** window.
 
 10. In a new tab, type the following URL by replacing **[*storage account*]** with the name of your storage account:
 
@@ -102,7 +122,7 @@
 
 4.  In the **Solution Explorer** pane, expand the **Roles** solution folder.
 
-5.  In the Solution Explorer pane, expand the Contoso.Events.Worker project.
+5.  In the Solution Explorer pane, expand the **Contoso.Events.Worker** project.
 
 6.  Double-click the **BlobStorageHelper.cs** file.
 
@@ -123,7 +143,7 @@
 3.  At the end of the **CreateBlob** method and before the closing parenthesis, create a new **CloudBlobContainer** for the **signin** container.
 
     ```
-    CloudBlobContainer container =    _blobClient.GetContainerReference("signin");
+    CloudBlobContainer container = _blobClient.GetContainerReference("signin");
     ```
 
 4.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists**:**
@@ -141,7 +161,7 @@
 6.  Use the **String.Format** static method to create a string, and then assign the string to the *blobName* variable:
 
     ```
-    blobName = String.Format("{0}_SignIn_{1:ddmmyyyss}.docx", eventKey,    DateTime.UtcNow);
+    blobName = String.Format("{0}_SignIn_{1:ddmmyyyss}.docx", eventKey, DateTime.UtcNow);
     ```
 
 7.  At the end of the **CreateBlob** method and before the closing parenthesis, create a block blob reference by using the **GetBlockBlobReference** method and the *blobName* variable as the parameter:
@@ -201,7 +221,7 @@
 7.  Create a new **CloudBlobContainer** instance for the **signin** container by using the *CloudBlobClient* variable:
 
     ```
-    CloudBlobContainer container =    blobClient.GetContainerReference("signin");
+    CloudBlobContainer container = blobClient.GetContainerReference("signin");
     ```
 
 8.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists:
@@ -248,43 +268,101 @@
 
 #### Task 2: Generate the Test Data
 
-1.  On the Start screen, type **Azure Storage Emulator**.
+1. In the **Solution Explorer** pane, expand the **Shared** solution folder.
 
-2.  Click the **Windows Azure Storage Emulator – v4.2** tile.
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Data.Generation** project.
 
-3.  Switch to **Contoso.Events – Microsoft Visual Studio** window.
+3. Locate and open the **app.config** file in the project.
 
-4.  In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+3. In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
+
+4. Wait for debugging to complete (when the console window closes).
 
 #### Task 3: Download generated sign-in sheets from the blob storage
 
-1.  In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
+1. In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
 
-2.  In the **Solution** ‘**Contoso.Events’** **Property Pages** dialog box, perform the following steps:
+1. Navigate to the **Startup Project** section located under the **Common Properties** header.
 
-    a. Make sure that **CommonProperties** =&gt; **Startup Project** is selected in the navigation menu on the left.
+1. In the **Startup Project** section, locate and select the **Multiple startup projects** option.
 
-    b. Select **Multiple startup projects**.
+1. Within the **Multiple startup projects** table, perform the following actions:
 
-    c. For **Contoso.Events.Web**, set the **Action** to **Start**.
+    a. Locate the **Contoso.Events.Web** entry and change it's *Action* from **None** to **Start**.
 
-    d. For **Contoso.Events.Management**, set the **Action** to **Start without debugging**.
+    b. Locate the **Contoso.Events.Management** entry and change it's *Action* from **None** to **Start**.
 
-    e. Ensure that all the remaining projects have their **Action** set to **None**.
+    c. Locate the **Contoso.Events.Worker** entry and change it's *Action* from **None** to **Start**.
 
-    f. Click **OK** to close the dialog box.
+1. Click the **OK** button to close the *Property* dialog.
 
-3.  On the **Debug** menu, click **Start Debugging**.
+1. In the **Solution Explorer** pane, expand the **Administration** solution folder.
 
-4.  In the Windows **notification area**, click the arrow to see the running applications.
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Management** project.
 
-5.  Locate **IIS Express*,*** and right-click the icon.
+3. Locate and open the **web.config** file in the project.
 
-6.  Point to **Contoso.Events.Management** under the **View Sites** header, and then click the URL under the **Browse Applications** header.
+4. Within the **web.config** file, locate the following configuration setting:
 
-7.  Point to **Contoso.Events.Web** under the **View Sites** header, and then click the URL under the **Browse Applications** header.
+    ```
+    <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
+    ```
 
-8.  On the home page for the **Administration** web application, click the button to view the list of events.
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+1. In the **Solution Explorer** pane, expand the **Roles** solution folder.
+
+2. In the **Solution Explorer** pane, expand the **Contoso.Events.Web** project.
+
+3. Locate and open the **web.config** file in the project.
+
+4. Within the **web.config** file, locate the following configuration setting:
+
+    ```
+    <add key="Microsoft.WindowsAzure.Storage.ConnectionString" value="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+2.  In the **Solution Explorer** pane, expand the **Contoso.Events.Worker** project.
+
+3. Locate and open the **app.config** file in the project.
+
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add name="AzureWebJobsStorage" connectionString="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **connectionString** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add name="AzureWebJobsDashboard" connectionString="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **connectionString** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+4. Within the **app.config** file, locate the following configuration setting:
+
+    ```
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    ```
+
+5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
+
+2.  On the **Debug** menu, click **Start Debugging**.
+
+8.  On the home page for the **Contoso Events Administration** web application, click the button to view the list of events.
 
 9.  Click the **Sign-In Sheet** button for any event in the list.
 
@@ -300,7 +378,7 @@
 
 #### Task 1: Modify Container Access using Cloud Explorer
 
-1.  On the desktop, click the Contoso.Events - Visual Studio 2015 window.
+1.  On the desktop, click the **Contoso.Events - Visual Studio 2015** window.
 
 2.  On the **Debug** menu, click **Stop Debugging**.
 
@@ -308,9 +386,9 @@
 
 4.  Expand the **Storage Accounts** node.
 
-5.  Expand the **Development** account node under the **Storage Accounts** node.
+5.  Expand the node for the storage account used in this lab under the **Storage Accounts** node.
 
-6.  Expand the **Blobs** node under **Development** account node.
+6.  Expand the **Blob Containers** node under **Development** account node.
 
 7.  Select the **signin** container, and then click **Properties Tab** below.
 
@@ -341,13 +419,13 @@
 6.  At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new **CloudBlobClient** for the *\_storageAccount* variable.
 
     ```
-    CloudBlobClient blobClient = \_storageAccount.CreateCloudBlobClient();
+    CloudBlobClient blobClient = _storageAccount.CreateCloudBlobClient();
     ```
 
 7.  Create a new **CloudBlobContainer** for the **signin** container by using the *CloudBlobClient* variable.
 
     ```
-    CloudBlobContainer container =    blobClient.GetContainerReference("signin");
+    CloudBlobContainer container = blobClient.GetContainerReference("signin");
     ```
 
 8.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists**:**
@@ -377,7 +455,7 @@
 12. At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new instance of the **BlobContainerPermissions** class:
 
     ```
-    BlobContainerPermissions blobPermissions = new   BlobContainerPermissions();
+    BlobContainerPermissions blobPermissions = new BlobContainerPermissions();
     ```
 
 13. Add the newly created **SharedAccessBlobPolicy** to the *BlobContainerPermissions* variable’s **SharedAccessPolicy** with the key **“ReadBlobPolicy”**:
@@ -432,13 +510,7 @@
 
 1.  On the **Debug** menu, click **Start Debugging**.
 
-2.  In the notification area, click the arrow to see the running applications.
-
-3.  Locate **IIS Express**, and then right-click the icon.
-
-4.  Point to the **Contoso.Events.Management** option under the **View Sites** header, and then click the URL under the **Browse Applications** header.
-
-5.  On the home page for the **Administration** web application, click the button to view the list of events.
+5.  On the home page for the **Contoso Events Administration** web application, click the button to view the list of events.
 
 6.  Click the **Sign-In Sheet** button for any event in the list.
 
