Module 8 Bug Fixes

--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -256,7 +256,7 @@
 
 1. On the desktop, click the **Home - Contoso.Events.Administration** window.
 
-1. On the home page of the **Administration** web application, click the **Events** button to go to the list of events.
+1. On the home page of the **Contoso Events Administration** web application, click the **Events** button to go to the list of events.
 
 1. Click **Sign-In Sheet** for any event in the list.
 
@@ -368,7 +368,7 @@
 
 #### Task 2: Update administration application to add requests to the queue
 
-1. In the **Solution Explorer** pane, expand the **Administration** folder and then expand the **Contoso.Events.Management** project.
+1. In the **Solution Explorer** pane, expand the **Contoso Events Administration** folder and then expand the **Contoso.Events.Management** project.
 
 1. Double-click the **Web.config** file.
 
@@ -426,7 +426,7 @@
 
 1. Point to the **Contoso.Events.Web** option under the **View Sites** header, and then click the URL under **Browse Applications**.
 
-1. On the home page for the **Administration** web application, click the **Events** button to view the list of events.
+1. On the home page for the **Contoso Events Administration** web application, click the **Events** button to view the list of events.
 
 1. Click the **Sign-In Sheet** button for any event in the list.
 
