--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
@@ -6,8 +6,7 @@
 
 Now that you can generate sign-in sheets in worker roles, you need a scalable and consistent way to enqueue messages for the worker role. You have decided to use an Azure queue mechanism so that you can scale the worker roles in isolation to meet the demand of the queue size. In this lab, you will begin by implementing the communication between the Administration web application and the worker role by using Storage queues. Then you will replace that implementation with an implementation that uses Service Bus queues.
 
-Currently, your on-premises Contoso Events application uses a WCF service to list the hotels that are near a location. You would like to continue to use the WCF service, but you cannot modify your company’s firewall. You also would not like to expose the true network location of
-the WCF service. You have decided to use Service Bus relays so that you have a common endpoint that you can provide to client applications. You will start by using that endpoint in your Contoso Events web application.
+Currently, your on-premises Contoso Events application uses a WCF service to list the hotels that are near a location. You would like to continue to use the WCF service, but you cannot modify your company’s firewall. You also would not like to expose the true network location of the WCF service. You have decided to use Service Bus relays so that you have a common endpoint that you can provide to client applications. You will start by using that endpoint in your Contoso Events web application.
 
 ### Objectives
 
@@ -23,11 +22,9 @@ After you complete this lab, you will be able to:
 
   - Consume Service Bus queue messages.
 
-  - Modify the XML configuration of a WCF service to use the Service Bus
-  relay bindings.
+  - Modify the XML configuration of a WCF service to use the Service Bus relay bindings.
 
-  - Modify the C# configuration of a WCF client to use the Service Bus
-  relay bindings.
+  - Modify the C# configuration of a WCF client to use the Service Bus relay bindings.
 
 ### Lab Setup
 
@@ -224,7 +221,7 @@ The main tasks for this exercise are as follows:
 
 1. Switch to the **Home - Contoso.Events.Administration** window.
 
-1. In the **Administration** web application, select any event, generate a sign-in sheet, and then download the sign-in sheet.
+1. In the **Contoso Events Administration** web application, select any event, generate a sign-in sheet, and then download the sign-in sheet.
 
 1. Verify that the application pauses execution at the debug breakpoint.
 
@@ -351,7 +348,7 @@ The main tasks for this exercise are as follows:
 
 1. Switch to the **Home - Contoso.Events.Administration** window.
 
-1. In the **Administration** web application, select any event, generate a sign-in sheet, and then download the sign-in sheet.
+1. In the **Contoso Events Administration** web application, select any event, generate a sign-in sheet, and then download the sign-in sheet.
 
 1. Verify that the application pauses execution at the debug breakpoint.
 
