Change Mod 8 Folder Structure

--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_08.md
@@ -119,7 +119,7 @@ The main tasks for this exercise are as follows:
 
 1.  Open the **Contoso.Events** solution from the following location:
 
-  > File location: **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Queues\\Contoso.Events**
+  > File location: **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Contoso.Events**
 
 1. Open the **TableStorageQueueHelper.cs** file.
 
@@ -353,7 +353,7 @@ The main tasks for this exercise are as follows:
     config.UseServiceBus();
     ```
 
-1. In the **Main** method, update the intialization of the **JobHost** instance by passing in the **JobHostConfiguration** as a constructor parameter:
+1. In the **Main** method, update the initialization of the **JobHost** instance by passing in the **JobHostConfiguration** as a constructor parameter:
 
     ```
     var host = new JobHost(config);
@@ -406,161 +406,6 @@ The main tasks for this exercise are as follows:
 
 > **Results:** After completing this exercise, you will have created and
 consumed messages from Service Bus Queues.
-
-## Exercise 4:	Using Service Bus Relay to Connect a WCF Service and Client[s]
-
-### Scenario
-
-In this exercise, you will:
-
-  - Manage the XML configuration for a WCF service.
-
-  - Modify an existing WCF service to use Service Bus relay bindings.
-
-  - Manage the C\# configuration for a WCF service.
-
-  - Update a WCF client to use a Service Bus relay binding
-
-  - Consume a WCF service by using Service Bus relay endpoints.
-
-The main tasks for this exercise are as follows:
-
-  1. Test the existing WCF service by using a console application.
-
-  1. Modify the WCF service endpoints to use Service Bus relay.
-
-  1. Test the relayed WCF service by using a console application.
-
-  1. Update the cloud web application to connect to the relayed WCF service.
-
-  1. Debug the cloud web application.
-
-#### Task 1: Test the existing WCF service by using a console application
-
-1. Open the **Contoso.Events** solution from the following location:
-
-  - File location: **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Relay\\Contoso.Events**
-
-1. Open the **Contoso.Events.Lodging.Client** solution from the following location:
-
-  - File location: **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Relay\\Contoso.Events.Lodging.Client**
-
-1. Switch to the **Contoso.Events – Microsoft Visual Studio** window.
-
-1. Debug the **Contoso.Events.Lodging** project in the **Contoso.Events** solution.
-
-1. Switch to the **Contoso.Events.Lodging.Client – Microsoft Visual Studio** window.
-
-1. Debug the **Contoso.Events.Lodging.Client** solution.
-
-1. View the list of hotels in the Console application.
-
-1. Stop debugging both solutions.
-
-#### Task 2: Modify the WCF service endpoints to use Service Bus relay
-
-1. Switch to the **Contoso.Events –** **Microsoft Visual Studio** window.
-
-1. Open the **App.config** file in the **Contoso.Events.Lodging** project.
-
-1. Update the service endpoint to use **netTcpRelayBinding** instead of **netTcpBinding**.
-
-1. Update the service endpoint to use an address in the following format:
-
-  - sb://[*namespace*].servicebus.windows.net/lodging
-
-  > **Note:** Replace the **[*namespace*]** tag with the name of your namespace.
-
-1. Update the **ServiceBusRelayBehavior** behavior element with the following code:
-
-  ```
-  <behavior name="ServiceBusRelayBehavior">
-      <transportClientEndpointBehavior>
-          <tokenProvider>
-              <sharedAccessSignature keyName="[keyName]" key="[key]" />
-          </tokenProvider>
-      </transportClientEndpointBehavior>
-  </behavior>
-  ```
-
-1. Locate the **keyName** attribute in the **sharedAccessSignature** element, and then replace its value with the **SharedAccessKeyName** value from your previously recorded Service Bus connection string.
-
-1. Locate the **key** attribute in the **sharedAccessSignature** element, and then replace its value with the **SharedAccessKey** value from your previously recorded Service Bus connection string.
-
-  > **Note:** For example your connection string may be: *Endpoint=sb://contoso.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=ABC123/J3y+tk-*. Your **keyName** value would be “*RootManageSharedAccessKey*” and your **key** value would be “*ABC123/J3y+tk=”*.
-
-1. Debug the solution.
-
-#### Task 3: Test the relayed WCF service by using a console application
-
-1. Switch to the **Contoso.Events.Lodging.Client –** **Microsoft Visual Studio** window.
-
-1. Open the **Program.cs** file in the **Contoso.Events.Lodging.Client** project.
-
-1. Locate the **GetHotels** method.
-
-1. Replace the line that creates the Uri:
-
-  ```
-  Uri serviceUri = new Uri("net.tcp://localhost:8000/lodging", UriKind.Absolute);
-  ```
-
-  with a line that uses the **CreateServiceUri** helper method, as shown in the following code:
-
-  ```
-  Uri serviceUri = ServiceBusEnvironment.CreateServiceUri("sb", "[namespace]", "lodging");
-  ```
-
-1. Update the **[namespace]** value with the name of your Service Bus namespace.
-
-1. Update the **NetTcpBinding** with its relay equivalent **(NetTcpRelayBinding)**.
-
-1. After the creation of the **ChannelFactory<ILodgingService>** instance, create an endpoint behavior with the Shared Secret Token provider by using the following code:
-
-  ```
-  TransportClientEndpointBehavior endpointBehavior = new TransportClientEndpointBehavior();
-
-  endpointBehavior.TokenProvider = TokenProvider.CreateSharedAccessSignatureTokenProvider("[keyName]", "[key]");
-
-  cf.Endpoint.EndpointBehaviors.Add(endpointBehavior);
-  ```
-
-1. Replace the [**keyName]** value with the **SharedAccessKeyName** value from your previously recorded Service Bus connection string.
-
-1. Replace the [**key]** value with the **SharedAccessKey** value from your previously recorded Service Bus connection string.
-
-1. Debug the solution.
-
-#### Task 4: Update the cloud web application to connect to the relayed WCF service
-
-1. Copy the **GetHotels** method from the **Program.cs** file.
-
-1. Switch to the **Contoso.Events – Microsoft Visual Studio** window, and then stop debugging.
-
-1. Open the **HotelsViewModel.cs** file in the **Contoso.Events.ViewModels** project.
-
-1. Replace the **GetHotels** method that returned an empty Enumerable with your copied method, as shown in the following code:
-
-  ```
-  private static IEnumerable<Hotel> GetHotels()
-  {
-      return Enumerable.Empty<Hotel>();
-  }
-  ```
-
-#### Task 5: Debug the cloud web application
-
-1. Update your solution configuration to start both the **Contoso.Events.Web** and **Contoso.Events.Lodging** projects when the solution is debugged.
-
-1. Locate the **Contoso.Events.Data.Generation** project.
-
-1. Update the **app.config** file in the project to use your *Storage Account*'s connection string in the **StorageConnectionString** *AppSetting*.
-
-1. Debug the **Contoso.Events.Data.Generation** project to generate the SQL and storage tables data.
-
-1. Debug the **Contoso.Events.Web** and **Contoso.Events.Lodging** projects.
-
-> **Results:** After completing this exercise, you will have connected existing WCF applications to clients by using Service Bus relay.
 
 ©2016 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
