--- a/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
+++ b/Instructions/Labs/dotnet/Mod08/20532C_LAB_AK_08.md
@@ -76,7 +76,7 @@
 
 1. On the taskbar, click the **File Explorer** icon.
 
-1. In the Libraries window, go to **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Queues\\Contoso.Events**, and then double-click **Contoso.Events.sln.**
+1. In the Libraries window, go to **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Contoso.Events**, and then double-click **Contoso.Events.sln.**
 
 1. In the **Solution Explorer** pane, expand the **Roles** folder.
 
@@ -621,272 +621,6 @@
 1. Close the **Contoso.Events – Microsoft Visual Studio** window.
 
 > **Results:** After completing this exercise, you will have created and consumed messages from Service Bus Queues.
-
-## Exercise 4: Using Service Bus Relay to Connect a WCF Service and Client[s]
-
-#### Task 1: Test the existing WCF service by using a console application
-
-1.  On the Start screen, click **Desktop**.
-
-1. On the taskbar, click the **File Explorer** icon.
-
-1. In the Libraries window, go to **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Relay\\Contoso.Events**, and then double-click **Contoso.Events.sln.**
-
-1. On the Start screen, click **Desktop**.
-
-1. On the taskbar, click the **File Explorer** icon.
-
-1. In the Libraries window, go to **Allfiles (F):\\Mod08\\Labfiles\\Starter\\Relay\\Contoso.Events.Lodging.Client**, and then double-click **Contoso.Events.Lodging.Client.sln.**
-
-1. On the desktop, click the **Contoso.Events – Microsoft Visual Studio** window.
-
-1. In the **Solution Explorer** pane, expand the **On-Premise** folder, right-click the **Contoso.Events.Lodging** project, and then click **Set as Startup Project**.
-
-1. On the **Debug** menu, click **Start Debugging**.
-
-1. You will see a prompt indicating that the WCF service does not have any metadata and inquiring whether or not you wish to exit the debugging process. Click **No**.
-
-1. Minimize **WCF Test Client**.
-
-1. On the desktop, click the **Contoso.Events.Lodging.Client** **– Microsoft Visual Studio** window.
-
-1. On the **Debug** menu, click **Start Debugging**.
-
-1. Verify that the four hotel names are listed.
-
-1. Press any key in the console window to close the window.
-
-1. On the desktop, click the **Contoso.Events – Microsoft Visual Studio** window.
-
-1. On the **Debug** menu, click **Stop Debugging**.
-
-#### Task 2: Modify the WCF service endpoints to use Service Bus relay
-
-1.  On the desktop, click the **Contoso.Events – Microsoft Visual Studio** window.
-
-1. In the **Solution Explorer** pane, expand the **On-Premise** folder.
-
-1. In the **Solution Explorer** pane, expand the **Contoso.Events.Lodging** project.
-
-1. Double-click the **App.config** file.
-
-1. Locate the **system.serviceModel** XML element.
-
-1. Locate the **services** child XML element.
-
-1. Locate the first **endpoint** child XML element with a **contract** value of **Contoso.Events.Models.ILodgingService**.
-
-1. Replace the value of the **binding** attribute with the value: **netTcpRelayBinding**.
-
-1. Locate the first **endpoint** child XML element with a **contract** value of **Contoso.Events.Models.ILodgingService**.
-
-1. Replace the value of the **address** attribute with the value: **sb://**.
-
-1. Append the **address** attribute’s value with the name of your namespace.
-
-1. Append the **address** attribute’s value with the value: **.servicebus.windows.net/lodging**.
-
-1. Locate the **system.serviceModel** XML element.
-
-1. Locate the **behaviors** child XML element.
-
-1. Locate the **endpointBehaviors** child XML element.
-
-1. Locate the first **behavior** child XML element with a **name** value of **ServiceBusRelayBehavior**, as shown in the following code:
-
-<behavior name="ServiceBusRelayBehavior">
-
-</behavior>
-
-1. Within the tags of the **behavior** element, add a **transportClientEndpointBehavior** element, as shown in the following code:
-
-<transportClientEndpointBehavior>
-
-</transportClientEndpointBehavior>
-
-1. Within the tags of the **transportClientEndpointBehavior** element, add a **tokenProvider** element, as shown in the following code:
-
-<tokenProvider>
-
-</tokenProvider>
-
-1. Within the tags of the **tokenProvider** element, add a **sharedAccessSignature** element.
-
-<sharedAccessSignature keyName="[keyName]" key="[key]" />
-
-1. Within the **sharedAccessSignature** element,
-
-1. Remove the value of the **keyName** attribute.
-
-1. Replace the value of the **keyName** attribute with the **SharedAccessKeyName** value from your previously recorded Service Bus connection string.
-
-1. Within the **sharedAccessSignature** element, remove the value of the **key** attribute.
-
-1. Replace the value of the **key** attribute with the **SharedAccessKey** value from your previously recorded Service Bus connection string.
-
-  > **Note:** For example your connection string may be: Endpoint=sb://contoso.servicebus.windows.net/; SharedAccessKeyName=RootManageSharedAccessKey; SharedAccessKey=ABC123/J3y+tk=<span id="List_72" class="anchor"></span>Your **keyName** value would be “*RootManageSharedAccessKey*” and your **key** value would be “*ABC123/J3y+tk=”*.** **
-
-1. In the **Solution Explorer** pane, expand the **On-Premise** solution folder, right-click the **Contoso.Events.Lodging** project, and then click **Set as Startup Project**.
-
-1. On the **Debug** menu, click **Start Debugging**.
-
-1. You will see a prompt indicating that the WCF service does not have any metadata and inquiring whether or not you wish to exit the debugging process. Click **No**.
-
-1. Minimize, but do not close, the **WCF Test Client** application.
-
-#### Task 3: Test the relayed WCF service by using a console application
-
-1.  On your desktop, click the **Contoso.Events.Lodging.Client – Microsoft Visual Studio** window.
-
-1. In the **Solution Explorer** pane, expand the **Contoso.Events.Lodging.Client** project.
-
-1. Double-click the **Program.cs** file.
-
-1. Locate the method with the following signature:
-
-1. private static IEnumerable<Hotel> GetHotels()
-
-1. Remove the line that creates a Uri by using a static string, as shown in the following code:
-
-	```
-	Uri serviceUri = new Uri("net.tcp://localhost:8000/lodging", UriKind.Absolute);
-	```
-
-1. Replace the line with a line of code that creates a Uri by invoking the static method **ServiceBusEnvironment.CreateServiceUri** with the protocol, namespace, and relative name as its parameters, as shown in the following code:
-
-	```
-	Uri serviceUri = ServiceBusEnvironment.CreateServiceUri("sb", "[namespace]", "lodging");
-	```
-
-1. On the previous line of code, update the parameters for the **CreateServiceUri** method by replacing the **“[*namespace*]”** string with your Service Bus namespace.
-
-1. Remove the following line:
-
-1. new NetTcpBinding(),
-
-1. Replace the line with a line of code that creates a new instance of the **NetTcpRelayBinding** class:
-
-1. new NetTcpRelayBinding(),
-
-1. On the next line after the **ChannelFactory<ILodgingService**> instance is created, create an instance of the **TransportClientEndpointBehavior** class:
-
-	```
-	TransportClientEndpointBehavior endpointBehavior = new TransportClientEndpointBehavior();
-	```
-
-1. On the next line, set the *TransportClientEndpointBehavior* variable’s **TokenProvider** property to the result of an invocation of the \*\*TokenProvider.
-
-1. CreateSharedSecretTokenProvider\*\* static method:
-
-	```
-	endpointBehavior.TokenProvider = TokenProvider.CreateSharedAccessSignatureTokenProvider("[keyName]", "[key]");
-	```
-
-1. On the previous line of code, update the parameters for the **CreateSharedSecretTokenProvider** method by replacing the **“[key]”** string with the **SharedAccessKey** value of your previously recorded Service Bus connection string.
-
-1. On the previous line of code, update the parameters for the **CreateSharedSecretTokenProvider** method by replacing the **“[keyName]”** string with the **SharedAccessKeyName** value of your previously recorded Service Bus connection string.
-
-1. Add the new instance of the **TransportClientEndpointBehavior** to the **EndpointBehaviors** collection property of the **cf.Endpoint** variable:
-
-	```
-	cf.Endpoint.EndpointBehaviors.Add(endpointBehavior);
-	```
-
-1. On the **Debug** menu, click **Start Debugging**.
-
-1. Verify that the hotels are listed.
-
-1. Press any key in the console window to close the window.
-
-#### Task 4: Update the cloud web application to connect to the relayed WCF service
-
-1.  Locate the **Program.cs** file in the **Contoso.Events.Lodging.Client** project.
-
-1. Locate the method with the following signature.
-
-1. private static IEnumerable<Hotel> GetHotels()
-
-1. Select the method signature and body.
-
-1. Right-click the **selection**, and then click **Copy** to copy the entire method.
-
-1. On the desktop, click the **Contoso.Events – Microsoft Visual Studio** window.
-
-1. On the **Debug** menu, click **Stop Debugging**.
-
-1. In the **Solution Explorer** pane, expand the **Shared** folder.
-
-1. In the **Solution Explorer** pane, expand the **Contoso.Events. ViewModels** project.
-
-1. Double-click the **HotelsViewModel.cs** file.
-
-1. Locate the method with the following signature:
-
-1. private static IEnumerable<Hotel> GetHotels()
-
-1. Select the entire method signature and body.
-
-1. Right-click the selection, and then click **Paste** to paste the entire method.
-
-#### Task 5: Debug the cloud web application
-
-1.  In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
-
-In the **Solution Explorer** pane, right-click the **Contoso.Events** solution, and then click **Properties**.
-
-1. Navigate to the **Startup Project** section located under the **Common Properties** header.
-
-1. In the **Startup Project** section, locate and select the **Multiple startup projects** option.
-
-1. Within the **Multiple startup projects** table, perform the following actions:
-
-    a. Locate the **Contoso.Events.Web** entry and change it's *Action* from **None** to **Start**.
-
-    b. Locate the **Contoso.Events.Lodging** entry and change it's *Action* from **None** to **Start**.
-
-    d. Ensure that all the remaining projects have their **Action** set to **None**.
-
-1. Click the **OK** button to close the *Property* dialog.
-
-1. In the **Solution Explorer** pane, expand the **Shared** solution folder.
-
-2. In the **Solution Explorer** pane, expand the **Contoso.Events.Data.Generation** project.
-
-3. Locate and open the **app.config** file in the project.
-
-4. Within the **app.config** file, locate the following configuration setting:
-
-    ```
-    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
-    ```
-
-5. Update the setting by replacing the value of the **value** attribute (currently *UseDevelopmentStorage=true*) with your *Storage Account*'s connection string.
-
-3. In the **Solution Explorer** pane, right-click the **Contoso.Events.Data.Generation** project, point to **Debug**, and then click **Start New Instance**.
-
-4. Wait for debugging to complete (when the console window closes).
-
-1. On the **Debug** menu, click **Start without Debugging**.
-
-1. You will see a prompt indicating that the WCF service does not have any metadata and inquiring whether or not you wish to exit the debugging process. Click **No**.
-
-1. Minimize, but do not close, the **WCF Test Client** application.
-
-1. On the home page of the web application, click any event.
-
-1. On the event details page, click **Register Now**.
-
-1. Complete the Registration form with any arbitrary values.
-
-1. Click **Submit**.
-
-1. Observe that the **Registration Confirmation** web page shows a list of hotels.
-
-1. Close the **Internet Explorer** application.
-
-1. Close the **Microsoft Visual Studio** applications.
-
-> **Results:** After completing this exercise, you will have connected existing WCF applications to clients by using Service Bus relay.
 
 ©2016 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
