Bug Fixes Mod 10

--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_AK_10.md
@@ -1,6 +1,6 @@
 # Module 10: Securing Azure Web Applications
 
-# Lab: Integrating Azure Active Directory with the Events Administration Classic Portal
+# Lab: Integrating Azure Active Directory with the Events Administration Portal
 
 ## Exercise 1: Creating an Azure AD
 
@@ -40,6 +40,8 @@ Enter the email address and password for your Microsoft account, and then click 
 
 1.  In the list of directories, click the name of the directory **20532**.
 
+    > **Note:** You may be prompted with a popup dialog talking about Azure AD features. You can safely ignore this dialog by clicking the *checkmark* button to close it.
+
 2.  Click the **Users** tab at the top of the page.
 
 3.  At the bottom of the screen, click **Add User**.
@@ -60,7 +62,7 @@ Enter the email address and password for your Microsoft account, and then click 
 
     g. In the **Display Name** box, type **Admin User**.
 
-    h. In the **Role** list, select **Global Administrator**.
+    h. In the **Role** list, select **Global Admin**.
 
     i. In the **Alternate Email Address** box, type **example@contoso.com**.
 
