--- a/Instructions/Labs/dotnet/Mod10/20532C_LAB_10.md
+++ b/Instructions/Labs/dotnet/Mod10/20532C_LAB_10.md
@@ -36,7 +36,7 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
   -   User name: **Student**
 
-  -   Password: **AzurePa$w0rd**
+  -   Password: **AzurePa$$w0rd**
 
 5.  Verify that you received the credentials to sign in to the Azure Classic Portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
 
@@ -76,7 +76,7 @@ The main tasks for this exercise are as follows:
 
   - Domain Name: **ad20532\[*Your Name*\]**
 
-  - Country: **Select your current location**
+  - Country or Region: **Select your current location**
 
 #### Task 3: Create a Global Administrator role in the directory
 
@@ -96,7 +96,7 @@ The main tasks for this exercise are as follows:
 
   - Display Name: **Admin User**
 
-  - Role: **Global Administrator**
+  - Role: **Global Admin**
 
   - Alternate E-mail Address: [***example@contoso.com***](mailto:example@contoso.com)
 
